--- a/nx.json
+++ b/nx.json
@@ -32,7 +32,15 @@
       "options": {
         "targetName": "test"
       },
-      "exclude": []
+      "exclude": ["apps/backend-e2e/**/*"]
+    },
+    {
+      "plugin": "@nx/webpack/plugin",
+      "options": {
+        "buildTargetName": "build",
+        "serveTargetName": "serve",
+        "previewTargetName": "preview"
+      }
     }
   ],
   "generators": {
