--- a/package.json
+++ b/package.json
@@ -18,17 +18,24 @@
     "@m-thalmann/eslint-config-base": "^0.1.1",
     "@m-thalmann/eslint-config-typescript": "^0.1.1",
     "@m-thalmann/prettier-config": "^1.0.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/eslint": "20.1.2",
     "@nx/eslint-plugin": "20.1.2",
     "@nx/jest": "20.1.2",
     "@nx/js": "20.1.2",
+    "@nx/nest": "^20.1.2",
     "@nx/node": "20.1.2",
+    "@nx/web": "20.1.2",
+    "@nx/webpack": "20.1.2",
     "@nx/workspace": "20.1.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "globals": "^15.12.0",
@@ -38,9 +45,23 @@
     "lint-staged": "^15.2.10",
     "nx": "20.1.2",
     "prettier": "^3.3.3",
+    "swc-loader": "^0.2.6",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.5.2"
+    "typescript": "~5.5.2",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@fastify/static": "^7.0.4",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.3.0",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/platform-fastify": "^10.4.8",
+    "@nestjs/swagger": "^8.0.7",
+    "axios": "^1.6.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0"
   }
 }
