--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,6 +14,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
     "baseUrl": ".",
     "paths": {
       "@app/shared-types": ["libs/shared/types/src/index.ts"]
