--- a/apps/backend/src/.env.example
+++ b/apps/backend/src/.env.example
@@ -1,2 +1,9 @@
 # APP_PORT=3000
 # APP_BASE_PATH=/
+
+DATABASE_TYPE=mysql
+DATABASE_DATABASE=database-name
+DATABASE_HOST=localhost
+DATABASE_PORT=3306
+DATABASE_USERNAME=root
+DATABASE_PASSWORD=password
