--- a/package.json
+++ b/package.json
@@ -63,7 +63,10 @@
     "@nestjs/platform-fastify": "^10.4.8",
     "@nestjs/swagger": "^8.0.7",
     "@nestjs/typeorm": "^10.0.2",
+    "argon2": "^0.41.1",
     "axios": "^1.6.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "typeorm": "^0.3.20"
