feat(auth): add auth service with login and token creation

--- a/apps/backend/src/.env.example
+++ b/apps/backend/src/.env.example
@@ -1,5 +1,9 @@
 # APP_PORT=3000
 # APP_BASE_PATH=/
+APP_SECRET=
+
+# AUTH_ACCESS_TOKEN_EXPIRATION_MINUTES=10
+# AUTH_REFRESH_TOKEN_EXPIRATION_MINUTES=43200 # 30 days
 
 DATABASE_TYPE=mysql
 DATABASE_DATABASE=database-name
