--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/platform-fastify": "^10.4.8",
     "@nestjs/swagger": "^8.0.7",
