feat(auth): add sign up route and logic

--- a/apps/backend/src/.env.example
+++ b/apps/backend/src/.env.example
@@ -2,6 +2,8 @@
 # APP_BASE_PATH=/
 APP_SECRET=
 
+# APP_SIGN_UP_ENABLED=false
+
 # AUTH_ACCESS_TOKEN_EXPIRATION_MINUTES=10
 # AUTH_REFRESH_TOKEN_EXPIRATION_MINUTES=43200 # 30 days
 
