feat(mail): setup sending of emails using nodemailer

--- a/apps/backend/src/.env.example
+++ b/apps/backend/src/.env.example
@@ -13,3 +13,11 @@ DATABASE_HOST=localhost
 DATABASE_PORT=3306
 DATABASE_USERNAME=root
 DATABASE_PASSWORD=password
+
+MAIL_HOST=smtp.example.com
+MAIL_PORT=465
+MAIL_USERNAME=user@example.com
+MAIL_PASSWORD=password
+MAIL_SECURE=true
+MAIL_FROM_ADDRESS="no-reply@example.com"
+MAIL_FROM_NAME="@nestjs-angular-template/source"
