--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
+    "@types/nodemailer": "^6.4.17",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
     "eslint": "^8.57.0",
@@ -57,6 +58,7 @@
   "dependencies": {
     "@casl/ability": "^6.7.2",
     "@fastify/static": "^7.0.4",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.2",
@@ -68,6 +70,8 @@
     "axios": "^1.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "nodemailer": "^6.9.16",
+    "pug": "^3.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "typeorm": "^0.3.20"
