--- a/apps/backend/src/.env.example
+++ b/apps/backend/src/.env.example
@@ -1,6 +1,8 @@
 # APP_PORT=3000
 # APP_BASE_PATH=/
 APP_SECRET=
+APP_URL=http://localhost:3000
+APP_FRONTEND_URL=http://localhost:4200
 
 # APP_SIGN_UP_ENABLED=false
 
