--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/event-emitter": "^2.1.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-fastify": "^10.4.8",
     "@nestjs/swagger": "^8.0.7",
