--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@nestjs/platform-fastify": "^10.4.8",
     "@nestjs/schedule": "^4.1.2",
     "@nestjs/swagger": "^8.0.7",
+    "@nestjs/throttler": "^6.3.0",
     "@nestjs/typeorm": "^10.0.2",
     "argon2": "^0.41.1",
     "axios": "^1.6.0",
