--- a/package.json
+++ b/package.json
@@ -15,44 +15,44 @@
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
-    "@m-thalmann/eslint-config-base": "^0.1.1",
-    "@m-thalmann/eslint-config-typescript": "^0.1.1",
+    "@m-thalmann/eslint-config-base": "^0.2.0",
+    "@m-thalmann/eslint-config-typescript": "^0.2.1",
     "@m-thalmann/prettier-config": "^1.0.0",
     "@nestjs/cli": "^10.4.8",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@nx/eslint": "20.1.2",
-    "@nx/eslint-plugin": "20.1.2",
-    "@nx/jest": "20.1.2",
-    "@nx/js": "20.1.2",
-    "@nx/nest": "^20.1.2",
-    "@nx/node": "20.1.2",
-    "@nx/web": "20.1.2",
-    "@nx/webpack": "20.1.2",
-    "@nx/workspace": "20.1.2",
+    "@nx/eslint": "20.3.0",
+    "@nx/eslint-plugin": "20.3.0",
+    "@nx/jest": "20.3.0",
+    "@nx/js": "20.3.0",
+    "@nx/nest": "20.3.0",
+    "@nx/node": "20.3.0",
+    "@nx/web": "20.3.0",
+    "@nx/webpack": "20.3.0",
+    "@nx/workspace": "20.3.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
     "@types/nodemailer": "^6.4.17",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
+    "@typescript-eslint/parser": "^8.18.2",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
     "globals": "^15.12.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "lint-staged": "^15.2.10",
-    "nx": "20.1.2",
+    "nx": "20.3.0",
     "prettier": "^3.3.3",
     "sqlite3": "^5.1.7",
     "swc-loader": "^0.2.6",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.5.2",
+    "typescript": "5.6.3",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
