--- a/package.json
+++ b/package.json
@@ -13,14 +13,23 @@
   },
   "private": true,
   "devDependencies": {
+    "@angular-devkit/build-angular": "~19.0.0",
+    "@angular-devkit/core": "~19.0.0",
+    "@angular-devkit/schematics": "~19.0.0",
+    "@angular/cli": "~19.0.0",
+    "@angular/compiler-cli": "~19.0.0",
+    "@angular/language-service": "~19.0.0",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@m-thalmann/eslint-config-angular": "^0.3.1",
     "@m-thalmann/eslint-config-base": "^0.2.0",
+    "@m-thalmann/eslint-config-rxjs": "^0.3.1",
     "@m-thalmann/eslint-config-typescript": "^0.2.1",
     "@m-thalmann/prettier-config": "^1.0.0",
     "@nestjs/cli": "^10.4.8",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
+    "@nx/angular": "20.3.0",
     "@nx/eslint": "20.3.0",
     "@nx/eslint-plugin": "20.3.0",
     "@nx/jest": "20.3.0",
@@ -30,6 +39,7 @@
     "@nx/web": "20.3.0",
     "@nx/webpack": "20.3.0",
     "@nx/workspace": "20.3.0",
+    "@schematics/angular": "~19.0.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -38,12 +48,15 @@
     "@types/nodemailer": "^6.4.17",
     "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@typescript-eslint/parser": "^8.18.2",
+    "@typescript-eslint/utils": "^8.18.2",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.12.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
+    "jest-preset-angular": "~14.4.0",
     "lint-staged": "^15.2.10",
     "nx": "20.3.0",
     "prettier": "^3.3.3",
@@ -56,6 +69,14 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@angular/animations": "~19.0.0",
+    "@angular/common": "~19.0.0",
+    "@angular/compiler": "~19.0.0",
+    "@angular/core": "~19.0.0",
+    "@angular/forms": "~19.0.0",
+    "@angular/platform-browser": "~19.0.0",
+    "@angular/platform-browser-dynamic": "~19.0.0",
+    "@angular/router": "~19.0.0",
     "@casl/ability": "^6.7.2",
     "@fastify/static": "^7.0.4",
     "@nestjs-modules/mailer": "^2.0.2",
@@ -77,6 +98,7 @@
     "pug": "^3.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "zone.js": "~0.15.0"
   }
 }
