--- a/package.json
+++ b/package.json
@@ -90,11 +90,14 @@
     "@nestjs/swagger": "^8.0.7",
     "@nestjs/throttler": "^6.3.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@primeng/themes": "^19.0.3",
     "argon2": "^0.41.1",
     "axios": "^1.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "nodemailer": "^6.9.16",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.0.3",
     "pug": "^3.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
